# proto-lang

./: .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  build.bat  definitions.cpp  definitions.h  first-build.bat  main.cpp  scouting-iterator.h  system.h
docs/: Makefile
docs/source/: concepts.rst  conf.py  fn-combinators.rst  index.rst  pattern.rst  scan_view.rst  scanning-algorithms.rst
docs/source/pattern/: fn-combinators.rst  pattern.rst  scanning-algorithms.rst
examples/: abstraction-examples.h
examples/lox/: lox-algorithms.cpp  lox-common.h  lox-declarative.cpp  lox-grammar.cpp  lox-higher-order.cpp  lox-low-level.cpp
include/: concepts-kludge.h  definitions.h  pattern.h  scan_view.h  scanner.h  scanning-algorithms.h  scouting-iterator.h  syntax.h  system.h
include/detail/: meta.hpp  type_traits.hpp
pattern/: CMakeLists.txt  abstraction-examples.h  adt.h  fn-combinators.h  lox-algorithms.cpp  lox-common.h  lox-higher-order.cpp  lox-low-level.cpp  lox-proto-nice.cpp  lox-proto-nice.h  lox-proto.cpp  lox-test  lox-test-input.proto  lox-test.cpp  matcher-generators.h  matcher.h  matching-algorithms.h  nice-tuple.h  nice-variant.cpp  parsing-test.cpp  pattern.cpp  pattern.h  pattern2.cpp  pattern2.h  scan_view.h  scanner-generators.h  scanner.h  scanning-algorithms.h  scanning-concepts.h  scouting-iterator.h  test.cpp
proto/: definitions.cpp  definitions.h  definitions.proto
source/pattern/: fn-combinators.h  grammarDSL.h  pattern.h  scan_view.h  syntax.h
syntax/: CMakeLists.txt  code_view.cpp  syntax.cpp  syntax.h
system/: CMakeLists.txt  system.cpp
tests/unit/pattern/: fn-combinators.test.cpp
